2012-08-15  Roland McGrath  <roland@hack.frob.com>

	* crypt/sha512.c (sha512_process_block) [!USE_TOTAL128]: Avoid
	shifting LEN more than 31 bits at once.

2012-08-15  Liubov Dmitrieva  <liubov.dmitrieva@gmail.com>

	[BZ #14195]
        * sysdeps/i386/i686/multiarch/strcmp-sssse3.S: Fix
        segmentation fault for a case of two empty input strings.
	* string/test-strncasecmp.c (check1): Renamed to...
	(bz12205): ...this.
	(bz14195): Add new testcase for two empty input strings and N > 0.
	(test_main): Call new testcase, adapt for renamed function.

2012-08-15  Andreas Jaeger  <aj@suse.de>

	[BZ #14090]
	* crypt/md5test2.c: New test, based on test supplied by Serge
	Belyshev <belyshev@depni.sinp.msu.ru>.
	* crypt/Makefile (xtests): Add md5test-giant..
	* crypt/Makefile ($(objpfx)md5test-giant): Add.

2012-08-15  Paul Eggert  <eggert@cs.ucla.edu>

	[BZ #14090]
	* crypt/md5.c (md5_process_block): Don't assume the buffer
	length is less than 2**32.
	* crypt/sha512.c (sha512_process_block): Don't assume the buffer
	length is less than 2**64.

2012-08-15  Roland McGrath  <roland@hack.frob.com>

	* string/str-two-way.h: Include <sys/param.h>.
	(MAX): Macro removed.

	* sysdeps/x86_64/multiarch/strstr-c.c: Add copyright header.
	Move #define and #undef of memmove to just before and after
	including <string.h>.

	* sysdeps/x86_64/multiarch/memmove.c: Don't include <stddef.h>.
	[!NOT_IN_libc]: Move #define and #undef of memmove to just before
	and after including <string.h>.  Move declarations of
	__memmove_sse2, __memmove_ssse3, and __memmove_ssse3_back
	to before #include "string/memmove.c".

	* include/dirent.h: Declare __getdirentries.

	* sysdeps/posix/system.c (do_system): Cast SUB_REF () to void when not
	using its value, to avoid warnings in the [!_LIBC_REENTRANT] case.

2012-08-14  Mike Frysinger  <vapier@gentoo.org>

	* config.h.in (HAVE_CPP_ASM_DEBUGINFO): Delete.
	* sysdeps/i386/configure.in: Remove assembler-with-cpp debug check.