@@ -1,5 +1,7 @@
 2012-08-15  Roland McGrath  <roland@hack.frob.com>
 
+	* rt/clock_nanosleep.c: Include <time.h>, not <sys/time.h>.
+
 	* crypt/sha512.c (sha512_process_block) [!USE_TOTAL128]: Avoid
 	shifting LEN more than 31 bits at once.
 
